@@ -14,7 +14,8 @@ SYMBOLS = {
     'IP_TRANSPARENT': 19,
     'SOL_IPV6': 41,
     'IPV6_RECVPKTINFO': 49,
-    'IPV6_PKTINFO': 50
+    'IPV6_PKTINFO': 50,
+    'IPV6_TRANSPARENT': 75
 }
 
 for symbol, value in SYMBOLS.items():
